--- a/Proof of Concept for SOP (Published Data)/PilotDataFINAL_Revised.Rmd
+++ b/Proof of Concept for SOP (Published Data)/PilotDataFINAL_Revised.Rmd
@@ -550,7 +550,7 @@ t.test(RG_Unifrac_Analysis$E_E, RG_Unifrac_Analysis$G_E, var.equal = FALSE, pair
 
 RG_Unifrac_barplot_csv<-read.csv(file="~/Dropbox/bdgallo_MS_SUNYESF/SUNYESF_MS_THESIS/MS_Microbiome_Research_&_Chapter_Databases/Pilot_Project_Fall2017/Data_Files_Analysis/USEARCH_RG/RG_Unifrac_barplot.csv", header=TRUE, check.names =FALSE)
 
-RG_Unifrac_barplot<-ggplot(RG_Unifrac_barplot_csv, aes(x=Pairwise_Comparison, y = Distance)) + geom_bar(colour = "black", stat="identity", position = position_dodge()) + ylim (0, 0.9) + theme_classic() + labs(title = "Pairwise UniFrac Distances", subtitle = "Governor's Island vs. Eagle Wings", x = "", y = "Weighted UniFrac Distance") + scale_fill_manual(values = c("gray", "gray", "gray", "gray")) +  geom_errorbar(aes(ymin=Distance-SE, ymax = Distance+SE), width=.2, position=position_dodge(.9)) + geom_text(aes(label = "A"), x = 0.95, y = 0.7, hjust = 0, colour = "black", size = 7) + geom_text(aes(label = "B"), x = 1.95, y = .7, hjust = 0, colour = "black", size = 7)+ geom_text(aes(label = "C"), x = 2.95, y = 0.7, hjust = 0, colour = "black", size = 7)+ geom_text(aes(label = "C"), x = 3.95, y = 0.815, hjust = 0, colour = "black", size = 7)
+RG_Unifrac_barplot<-ggplot(RG_Unifrac_barplot_csv, aes(x=Pairwise_Comparison, y = Distance)) + geom_bar(colour = "black", stat="identity", position = position_dodge()) + ylim (0, 0.9) + theme_classic() + labs(title = "Pairwise UniFrac Distances", subtitle = "Governors Island vs. Eagle Wings", x = "", y = "Weighted UniFrac Distance") + scale_fill_manual(values = c("gray", "gray", "gray", "gray")) +  geom_errorbar(aes(ymin=Distance-SE, ymax = Distance+SE), width=.2, position=position_dodge(.9)) + geom_text(aes(label = "A"), x = 0.95, y = 0.7, hjust = 0, colour = "black", size = 7) + geom_text(aes(label = "B"), x = 1.95, y = .7, hjust = 0, colour = "black", size = 7)+ geom_text(aes(label = "C"), x = 2.95, y = 0.7, hjust = 0, colour = "black", size = 7)+ geom_text(aes(label = "C"), x = 3.95, y = 0.815, hjust = 0, colour = "black", size = 7)
 
 RG_Unifrac_barplot
 
